--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -1,5 +1,7 @@
 <html>
-
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <link rel="stylesheet" type="text/css" href="./mstyle.css">
 <title>Michael Magee</title>
@@ -29,15 +31,10 @@ From 01/01/2021-31/12/2025 I am the PI of ERC Starting Grant project UBIQGAP (gr
 <center><b>`The ubiquity of optimal spectral gaps'</b></center>
 <br>
 
-	
-<br>
+<div class="collapsible">
+[Click for an abridged abstract] 
 </div>
-
-
-<div class="optw">
-<br>
-An abridged abstract of the program: <br>
-<br>
+<div class="optc">
 <i>
 Spectral gap is a fundamental concept in mathematics, physics, and computer science as it governs the exponential rate at which a process converges towards its stationary state. It informs the spectral lines of hydrogen, how we shuffle cards, the behavior of semiconductors, and web search algorithms. <br>
 Moreover, some of the most prominent issues of contemporary mathematics, including the Ramanujan-Petersson conjecture and the Yang-Mills mass gap, revolve around spectral gap. This proposal seeks to investigate the nature of the spectral gap for hyperbolic surfaces and unitary representations of fundamental groups of surfaces. <br>
@@ -46,10 +43,162 @@ A main technical tool is the development of new formulas for integration over re
 These integral formulas are of high independent interest. For example, I propose to establish estimates that extend important results 
 in Voiculescu's Free Probability Theory from the context of free groups, to fundamental groups of closed compact surfaces, and beyond. 
 </i>
-
-
-</div> 
+</div>
 <br>
+<u><b>Team members</b></u><br>
+<a href="https://www.imo.universite-paris-saclay.fr/~calderon/">Irving Calder&oacuten</a> (PDRA)
+<br>
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> (PDRA)
+<br>
+Ewan Cassidy (Ph.D. Student)
+</div> 
+
+
+<center>
+			
+<table class="opt" style="width: 90%">
+
+    <colgroup>
+       <col span="1" style="width: 3%;">
+       <col span="1" style="width: 3%;">
+       <col span="1" style="width: 84%;">
+    </colgroup>
+<tr >    <th colspan="3", text-align="center"></th>
+</tr>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program</u></th>
+</tr>
+<tr >    <th colspan="3", text-align="center"></th>
+</tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td> <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
+ (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)<br>
+Preprint, Submitted
+</b>
+<br>
+
+</td>	
+</tr>	
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
+ (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+</b>
+<br>
+Preprint, Submitted
+<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
+<a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
+</td>	
+</tr>	
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+ (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<br>
+Preprint, Submitted
+</td>	
+</tr>	
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
+</b> 
+<br>
+Preprint, Submitted
+</td>	
+</tr>	
+
+	
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>The asymptotic statistics of random covering surfaces.
+</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<br>Preprint, Submitted
+</td>	
+</tr>	
+<tr >
+<td>
+<a href="https://doi.org/10.1007/s00039-022-00602-x"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2003.10911"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>A random cover of a compact hyperbolic surface has relative
+spectral gap 3/16 - &#1013.
+</b> (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a> and 
+<a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<br>
+<u>Geometric and Functional Analysis (GAFA)</u>, 2022.
+</td>	
+</tr>	
+<tr >
+<td>
+<a href="https://doi.org/10.1007/s10711-022-00706-6"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2108.00717"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Core surfaces.
+</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<br><u>Geometriae Dedicata</u>, 2022.
+</td>	
+</tr>	
+<td>
+<a href="https://doi.org/10.1007/s00220-021-04295-5"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2101.00252"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Random Unitary Representations of Surface Groups I: Asymptotic expansions.
+</b> 
+<br>
+<u>Communications in Mathematical Physics</u>, 2022.
+</td>	
+</tr>	
+		
+
+
+  
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 
 
