--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div> <b>Michael Magee</b> </div>
 
 
-<img src="port2.jpg" width="25%"></img>
+<img src="port3.gif" width="25%"></img>
     
 <br>
     
@@ -45,16 +45,13 @@
 <div class="optw"><b>Upcoming travel</b></div>
 
 <div class="optw">
-Haifa (IL), 17-22 July 2022<br>
-Zurich, 14-16 September 2022 <br>
 Paris, 2-4 November 2022
-
 </div> 
 <div class="optw"><b>PhD students</b></div>
 <div class="optw">
-<a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> (2020-?) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
+<a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
 <br>
-Ewan Cassidy (2021-?) 
+Ewan Cassidy (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i>
 </div> 
 <div class="optw"><b>Current postdocs</b></div>
 
