--- a/papers.html
+++ b/papers.html
@@ -25,7 +25,7 @@
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center">Preprints </th>
+<tr >    <th colspan="3", text-align="center"><u>Preprints</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
@@ -36,7 +36,7 @@
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>22. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
- (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)<br>
+ (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> and <a href="https://yufeizhao.com/">Yufei Zhao</a>)<br>
 Submitted
 </b>
 <br>
@@ -132,7 +132,7 @@ Submitted </td>
 
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>		
-<tr >    <th colspan="3", text-align="center">Publications </th>
+<tr >    <th colspan="3", text-align="center"><u>Publications</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
