--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -69,6 +69,18 @@ Ewan Cassidy (Ph.D. Student)
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2209.15568"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Short geodesics and small eigenvalues on random hyperbolic punctured spheres.
+</b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+<br>Preprint
+</td>	
+</tr>	
 <tr >
 <td>
 </td>
@@ -76,8 +88,8 @@ Ewan Cassidy (Ph.D. Student)
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td> <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
- (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)<br>
-Preprint, Submitted
+ Michael Magee and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a><br>
+Preprint
 </b>
 <br>
 
@@ -90,10 +102,10 @@ Preprint, Submitted
 <a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
- (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+ <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and Michael Magee
 </b>
 <br>
-Preprint, Submitted
+Preprint
 <a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
 <a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
 </td>	
@@ -106,9 +118,9 @@ Preprint, Submitted
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
- (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+Michael Magee and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>
 <br>
-Preprint, Submitted
+Preprint
 </td>	
 </tr>	
 
@@ -120,9 +132,9 @@ Preprint, Submitted
 <a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Random Unitary Representations of Surface Groups II: The large n limit.
-</b> 
+</b> Michael Magee
 <br>
-Preprint, Submitted
+Preprint
 </td>	
 </tr>	
 
@@ -136,8 +148,8 @@ Preprint, Submitted
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>The asymptotic statistics of random covering surfaces.
-</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
-<br>Preprint, Submitted
+</b> Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
+<br>Preprint
 </td>	
 </tr>	
 <tr >
@@ -149,8 +161,8 @@ Preprint, Submitted
 </td>
 <td><b>A random cover of a compact hyperbolic surface has relative
 spectral gap 3/16 - &#1013.
-</b> (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a> and 
-<a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+</b> Michael Magee, <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>, and 
+<a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br>
 <u>Geometric and Functional Analysis (GAFA)</u>, 2022.
 </td>	
@@ -163,7 +175,7 @@ spectral gap 3/16 - &#1013.
 <a href="https://arxiv.org/abs/2108.00717"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>Core surfaces.
-</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+</b> Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
 <br><u>Geometriae Dedicata</u>, 2022.
 </td>	
 </tr>	
@@ -174,7 +186,7 @@ spectral gap 3/16 - &#1013.
 <a href="https://arxiv.org/abs/2101.00252"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
 </td>
 <td><b>Random Unitary Representations of Surface Groups I: Asymptotic expansions.
-</b> 
+</b> Michael Magee
 <br>
 <u>Communications in Mathematical Physics</u>, 2022.
 </td>	
