--- a/seminar.html
+++ b/seminar.html
@@ -30,7 +30,29 @@
 </tr>
 <tr >    <th colspan="3", text-align="center">Spectra/Moduli seminar</th>
 </tr>
-<tr >    <th colspan="3", text-align="center">We meet at 15:00 Monday in MCS3070</th>
+<tr >    <th colspan="3", text-align="center">We meet at 15:00 Monday in MCS2068</th>
+</tr>
+<tr >
+<td>
+10/10/2022
+</td>
+<td>
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
+</td>
+<td><b>Poisson statistics, short geodesics and small eigenvalues on hyperbolic punctured spheres<b>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">For hyperbolic surfaces, there is a deep connection between the geometry of closed geodesics and their spectral theoretic properties. In this talk, I will discuss recent work with Will Hide (Durham), where we study both sides of this relationship for hyperbolic punctured spheres. In particular, we consider Weil-Petersson random surfaces and demonstrate Poisson statistics for counting functions of closed geodesics with lengths on scales 1/sqrt(number of cusps), in the large cusp regime. Using similar ideas, we show that typical hyperbolic punctured spheres with many cusps have lots of arbitrarily small eigenvalues. Throughout, I will contrast these findings to the setting of closed hyperbolic surfaces in the large genus regime.
+</div>
+</td>	
 </tr>
 <tr >
 <td>
