--- a/seminar.html
+++ b/seminar.html
@@ -34,6 +34,160 @@
 </tr>
 <tr >
 <td>
+05/12/2022
+</td>
+<td>
+<a href="">TBA</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+28/11/2022
+</td>
+<td>
+<a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+21/11/2022
+</td>
+<td>
+<a href="">TBA</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+14/11/2022
+</td>
+<td>
+<a href="https://webusers.imj-prg.fr/~bram.petri/">Bram Petri</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+07/11/2022
+</td>
+<td>
+<a href="">TBA</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+31/10/2022
+</td>
+<td>
+<a href="">TBA</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+24/10/2022
+</td>
+<td>
+<a href="https://sites.google.com/view/samedwards">Sam Edwards</a> 
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
 10/10/2022
 </td>
 <td>
