--- a/seminar.html
+++ b/seminar.html
@@ -81,7 +81,7 @@
 21/11/2022
 </td>
 <td>
-<a href="">TBA</a> 
+<a href="https://lauramonk.github.io/">Laura Monk</a> 
 <td><b>Title TBA<b>
 </td>
 </td>	
