--- a/seminar.html
+++ b/seminar.html
@@ -37,7 +37,7 @@
 05/12/2022
 </td>
 <td>
-<a href="">TBA</a> 
+<a href="https://www.imo.universite-paris-saclay.fr/~calderon/">Irving Calder&oacuten</a>
 <td><b>Title TBA<b>
 </td>
 </td>	
@@ -147,7 +147,7 @@
 31/10/2022
 </td>
 <td>
-<a href="">TBA</a> 
+<a href="https://warwick.ac.uk/fac/sci/maths/people/staff/mark_pollicott/p1/">Mark Pollicott</a> 
 <td><b>Title TBA<b>
 </td>
 </td>	
@@ -170,7 +170,7 @@
 </td>
 <td>
 <a href="https://sites.google.com/view/samedwards">Sam Edwards</a> 
-<td><b>Title TBA<b>
+<td><b>Temperedness and the growth indicator function<b>
 </td>
 </td>	
 </tr >
@@ -182,7 +182,8 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">The shape of the spectrum of the Laplacian on a geometrically finite hyperbolic manifold \( M = \Gamma \backslash \mathbb{H}^{d+1} \)
+  is closely connected to the size of the critical exponent \(\delta\) of \(\Gamma\). In particular, results of Patterson, Sullivan, and Lax-Phillips imply that when \(\delta > \frac{d}{2}\), the base eigenfunction is square integrable, and the corresponding eigenvalue is isolated in the \(L^2\) spectrum. These facts allow one to use tools from representation theory to study dynamics on \(M\). On the other hand, when \(\delta\) is at most \(\frac{d}{2}\), one knows that \( L^2 ( \mathrm{SO}^o(d+1,1) ) \) is a tempered representation of \(\mathrm{SO}^o(d+1,1) \). I will discuss joint work with Hee Oh in which we investigate to what extend these properties hold for higher-rank infinite volume locally symmetric spaces. In particular, I will introduce the growth indicator function, a higher-rank analogue of the critical exponent, and discuss the role it plays in dynamics on higher-rank infinite volume homogeneous spaces.
 </div>
 </td>	
 </tr>
