--- a/papers.html
+++ b/papers.html
@@ -33,6 +33,18 @@
 <td>
 </td>
 <td>
+<a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
+ (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> <br>
+ Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
+</b>
+<br>
+</tr>
+<tr >
+<td>
+</td>
+<td>
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>22. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
