--- a/seminar.html
+++ b/seminar.html
@@ -122,33 +122,11 @@
 </tr>
 <tr >
 <td>
-07/11/2022
-</td>
-<td>
-<a href="">TBA</a> 
-<td><b>Title TBA<b>
-</td>
-</td>	
-</tr >
-<tr >
-<td>
-</td>
-<td>
-</td>
-<td><div class="collapsible">
-[Abstract] 
-</div>
-<div class="optc">TBA
-</div>
-</td>	
-</tr>
-<tr >
-<td>
 31/10/2022
 </td>
 <td>
 <a href="https://warwick.ac.uk/fac/sci/maths/people/staff/mark_pollicott/p1/">Mark Pollicott</a> 
-<td><b>Title TBA<b>
+<td><b>Estimates on Hausdorff dimension and Lyapunov exponents and their applications<b>
 </td>
 </td>	
 </tr >
@@ -160,7 +138,8 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">We will consider useful numerical invariants for simple dynamically defined sets 
+(in this case Hausdorff dimension) and transformations (in this case Lyapunov exponents).  We will consider the problem of getting rigorous estimates and the implications for some problems in number theory (in particular, the Lagrange spectrum in diophantine approximation) and Euclidean and Hyperbolic geometry (via barycentric subdvision of triangles and random walks in hyperbolic space) ... time permitting.
 </div>
 </td>	
 </tr>
