--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     
 <div class="optw"><b>About me</b></div>
 
-<div class="optw"> I'm a Professor at Durham University.  <br>
+<div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>.  <br>
 
  I'm interested in a broad range of problems in geometry, dynamics, spectral theory, and number theory.   <br>
  
- I am from Northern Ireland. 
+ I am from Northern Ireland. </br>
+ 
+ I am currently, with colleagues, organizing <a href="./DS_SG.html">Durham Symposium 2023: Spectral gaps</a>
 
 </div> 
 <div class="optw"><b>Contact</b></div>
