--- a/papers.html
+++ b/papers.html
@@ -126,21 +126,6 @@ Submitted
 
 
 
-<tr >	
-<td>
-</td>
-<td>	<a href="https://arxiv.org/abs/1904.13106"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>								
-<td>17. <b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
-</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)  <br>
-Submitted </td>
-
-</tr>	
-    
-
-
-
-
 
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>		
@@ -148,6 +133,22 @@ Submitted </td>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+
+
+
+<tr >	
+<td>
+</td>
+<td>	<a href="https://arxiv.org/abs/1904.13106"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>								
+<td>17. <b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
+</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)  <br>
+<u>Mathematische Annalen</u>, to appear</td>
+
+</tr>	
+    
+
 <tr >
 <td>
 <a href="https://doi.org/10.1007/s00039-022-00602-x"><img src="j_ico.png"title="Journal" width="100%"></a>
