--- a/DS_SG.html
+++ b/DS_SG.html
@@ -30,16 +30,28 @@ The goal is to produce a collaborative environment for discussions of recent dev
 <br>
 All participants will be given fully catered accommodation at Collingwood College Durham.
 </div> 
+
+<div class="optb"> 
+<br>
+<u><b>Speakers</b></u><br>
+Sam Edwards (Durham University)<br>
+Petr Kravchuk (King's College London)<br>
+*Jiaoyang Huang (University of Pennsylvania)<br>
+Dalimil Mazac (IAS Princeton)<br>
+Bram Petri (IMJ and Sorbonne University)<br>
+Nikhil Srivastava (UC Berkeley)<br>
+Nina Zubrilina (Princeton University)<br>
+* To be confirmed.
+</div>
 <div class="optb"> 
 <br>
 <u><b>Organising Committee</b></u><br>
-Rhiannon Dougall (Durham) <br>
-Michael Magee (Durham)<br>
-Fr&eacuted&eacuteric Naud (IMJ & Sorbonne)<br>
-Doron Puder (Tel Aviv)<br>
-Pankaj Vishe (Durham)<br>
+Rhiannon Dougall (Durham University) <br>
+Michael Magee (Durham University)<br>
+Fr&eacuted&eacuteric Naud (IMJ & Sorbonne University)<br>
+Doron Puder (Tel Aviv University)<br>
+Pankaj Vishe (Durham University)<br>
 </div>
-
 <div class="optb"> 
 <br>
 <u><b>Contact</b></u><br>
