--- a/seminar.html
+++ b/seminar.html
@@ -28,16 +28,16 @@
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center">Spectra/Moduli seminar</th>
+<tr >    <th colspan="3", text-align="center"><h1>Spectra/Moduli seminar</h1></th>
 </tr>
-<tr >    <th colspan="3", text-align="center">We meet at 15:00 Monday in MCS2068</th>
+<tr >    <th colspan="3", text-align="center"><h3>We meet at 15:00 Monday in MCS2068</h3></th>
 </tr>
 <tr >
 <td>
-05/12/2022
+26/01/2023
 </td>
 <td>
-<a href="https://www.imo.universite-paris-saclay.fr/~calderon/">Irving Calder&oacuten</a>
+<a href="https://www.kcl.ac.uk/people/petr-kravchuk">Petr Kravchuk</a>
 <td><b>Title TBA<b>
 </td>
 </td>	
@@ -53,6 +53,8 @@
 <div class="optc">TBA
 </div>
 </td>	
+</tr>
+<tr >    <th colspan="3", text-align="center"><h2>2022</h2></th>
 </tr>
 <tr >
 <td>
@@ -82,7 +84,7 @@
 </td>
 <td>
 <a href="https://lauramonk.github.io/">Laura Monk</a> 
-<td><b>Title TBA<b>
+<td><b>Friedman-Ramanujan functions in random hyperbolic geometry<b>
 </td>
 </td>	
 </tr >
@@ -94,7 +96,8 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc"> The Weil-Petersson model is a very nice and natural way to sample random hyperbolic surfaces. Unfortunately, it is not easy to compute expectations and probabilities in this probabilistic setting. We are only able to compute expectations of quantities that depend on lengths of *simple* closed geodesics, i.e. geodesics with no self-intersections, thanks to breakthrough work by Mirzakhani. The aim of this talk is to present new ideas that allow to deal with non-simple geodesics, developed in an ongoing collaboration with Nalini Anantharaman. We show that certain averages can be expanded in powers of 1/g and provide information on the terms appearing in this expansion. I will discuss the implications of these results in spectral geometry, and the inspiration we found in Friedman's work on random regular graphs.
+
 </div>
 </td>	
 </tr>
@@ -104,7 +107,7 @@
 </td>
 <td>
 <a href="https://webusers.imj-prg.fr/~bram.petri/">Bram Petri</a> 
-<td><b>Title TBA<b>
+<td><b>How do you efficiently cut a hyperbolic surface in two?<b>
 </td>
 </td>	
 </tr >
@@ -116,7 +119,7 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">The Cheeger constant of a Riemannian manifold measures how hard it is to cut out a large part of the manifold. If the Cheeger constant of a manifold is large, then, through Cheeger's inequality, this implies that Laplacian of the manifold has a large spectral gap. In this talk, I will discuss how large Cheeger constants of hyperbolic surfaces can be. I will discuss recent joint work with Thomas Budzinski and Nicolas Curien in which we prove that the Cheeger constant of a closed hyperbolic surface of large genus cannot be much larger than 2/pi (approximately 0.6366). This in particular proves that there is a uniform gap between the maximal possible Cheeger constant of a hyperbolic surface of large enough genus and the Cheeger constant of the hyperbolic plane (which is equal to 1).
 </div>
 </td>	
 </tr>
@@ -195,7 +198,7 @@
 <td>
 Michael Magee
 </td>
-<td><b><b>
+<td><b>Near optimal gaps for hyperbolic surfaces<b>
 <td><b><b>
 </td>	
 </tr >
@@ -296,13 +299,13 @@ All notions will be explained. Based on joint projects with M. Fraczyk-J. Raimba
 <td>
 <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
 </td>
-<td><b><b>
+<td><b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups<b>
 <td><b><b>
 </td>	
 </tr >
 
 
-<tr >    <th colspan="3", text-align="center">-------2021-------</th>
+<tr >    <th colspan="3", text-align="center"><h2>2021</h2></th>
 </tr>
 <tr >
 <td>
