--- a/seminar.html
+++ b/seminar.html
@@ -62,7 +62,7 @@
 </td>
 <td>
 <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder</a> 
-<td><b>Title TBA<b>
+<td><b>What is a one-relator group?<b>
 </td>
 </td>	
 </tr >
@@ -74,7 +74,8 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">One-relator groups \( G=\langle x_i | w \rangle \) as a class are something of an outlier in geometric group theory. On the one hand they have some good algorithmic properties, e.g. solvable word problem, but pathological examples abound, and they have therefore been resistant to most of the geometric tools we have available - for instance, small cancellation theory tells us nothing. I will relate the subgroup structure of a one-relator group \(G \) to the primitivity rank, a notion introduced by Puder, \( \pi(w) \) of \( w \), in his work on word maps in free groups. Our results seem to provide a conceptual explanation for some strong analogies between one-relator groups on the one hand and surface and three-manifold groups on the other. This is joint work with Henry Wilton.
+
 </div>
 </td>	
 </tr>
