--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
  
  <pre>email: michael(dot)r(dot)magee(AT)durham(dot)ac(dot)uk</pre>
 </div> 
-<div class="optw"><b>Upcoming travel</b></div>
 
-<div class="optw">
-Paris, 2-4 November 2022
-</div> 
+
+
 <div class="optw"><b>PhD students</b></div>
 <div class="optw">
 <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
 <br>
-Ewan Cassidy (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i>
+Ewan Cassidy (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
+Anitej Banerjee (2022-2026)
 </div> 
 <div class="optw"><b>Current postdocs</b></div>
 
