--- a/papers.html
+++ b/papers.html
@@ -138,13 +138,15 @@ Submitted
 
 
 <tr >	
+
 <td>
+<a href="https://doi.org/10.1007/s00208-022-02542-1"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>	<a href="https://arxiv.org/abs/1904.13106"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>								
 <td>17. <b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)  <br>
-<u>Mathematische Annalen</u>, to appear</td>
+<u>Mathematische Annalen</u>, 2023</td>
 
 </tr>	
     
