--- a/seminar.html
+++ b/seminar.html
@@ -34,6 +34,28 @@
 </tr>
 <tr >
 <td>
+06/03/2023
+</td>
+<td>
+<a href="http://users.sussex.ac.uk/~and22/">Antoine Dahlqvist</a>
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
 26/01/2023
 </td>
 <td>
@@ -51,6 +73,30 @@
 [Abstract] 
 </div>
 <div class="optc">TBA
+</div>
+</td>	
+</tr><tr >
+<td>
+09/01/2023
+</td>
+<td>
+<a href="https://www.mathi.uni-heidelberg.de/~ndang/">Thi Dang</a>
+<td><b>Equidistribution of flat periodic tori<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">Bowen and Margulis in the 70s proved that closed geodesics on compact hyperbolic surfaces equidistribute towards the measure of maximal entropy. 
+From a homogeneous dynamics point of view, this measure is the quotient of the Haar measure. <br>
+In a joint work with Jialun Li, we study a higher rank generalization of this homogeneous dynamics problem.
+
 </div>
 </td>	
 </tr>
