--- a/DS_SG.html
+++ b/DS_SG.html
@@ -30,17 +30,21 @@ The goal is to produce a collaborative environment for discussions of recent dev
 <br>
 All participants will be given fully catered accommodation at Collingwood College Durham.
 </div> 
-
+<div class="optb"> 
+<br>
+<u><b>Registration</b></u><br>
+<a href="https://forms.gle/BiHTsH9Spfov6GWS6">Here (link)</a>
+</div> 
 <div class="optb"> 
 <br>
 <u><b>Speakers</b></u><br>
-Sam Edwards (Durham University)<br>
-Petr Kravchuk (King's College London)<br>
-*Jiaoyang Huang (University of Pennsylvania)<br>
-Dalimil Mazac (IAS Princeton)<br>
-Bram Petri (IMJ and Sorbonne University)<br>
-Nikhil Srivastava (UC Berkeley)<br>
-Nina Zubrilina (Princeton University)<br>
+<b>Sam Edwards</b> (Durham University)<br>
+<b>Petr Kravchuk</b> (King's College London)<br>
+*<b>Jiaoyang Huang</b> (University of Pennsylvania)<br>
+<b>Dalimil Mazac</b> (IAS Princeton)<br>
+<b>Bram Petri</b> (IMJ and Sorbonne University)<br>
+<b>Nikhil Srivastava</b> (UC Berkeley)<br>
+<b>Nina Zubrilina</b> (Princeton University)<br>
 * To be confirmed.
 </div>
 <div class="optb"> 
