--- a/seminar.html
+++ b/seminar.html
@@ -56,6 +56,51 @@
 </tr>
 <tr >
 <td>
+20/02/2023
+</td>
+<td>
+<a href="https://www.southampton.ac.uk/people/5z97q7/doctor-kevin-boucher">Kevin Boucher</a>
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
+06/02/2023
+</td>
+<td>
+<a href="https://www.tbenardmath.com">Timoth&eacutee B&eacutenard</a>
+<td><b>Title TBA<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">TBA
+</div>
+</td>	
+</tr>
+<tr >
+<td>
 26/01/2023
 </td>
 <td>
@@ -245,7 +290,7 @@ In a joint work with Jialun Li, we study a higher rank generalization of this ho
 <td>
 Michael Magee
 </td>
-<td><b>Near optimal gaps for hyperbolic surfaces<b>
+<td><b>Near optimal spectral gaps for hyperbolic surfaces<b>
 <td><b><b>
 </td>	
 </tr >
