--- a/DS_SG.html
+++ b/DS_SG.html
@@ -39,13 +39,14 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <br>
 <u><b>Speakers</b></u><br>
 <b>Sam Edwards</b> (Durham University)<br>
+<b>Will Hide</b> (Durham University)<br>
 <b>Petr Kravchuk</b> (King's College London)<br>
-*<b>Jiaoyang Huang</b> (University of Pennsylvania)<br>
 <b>Dalimil Mazac</b> (IAS Princeton)<br>
+<b>Wenyu Pan</b> (University of Toronto)<br>
 <b>Bram Petri</b> (IMJ and Sorbonne University)<br>
 <b>Nikhil Srivastava</b> (UC Berkeley)<br>
 <b>Nina Zubrilina</b> (Princeton University)<br>
-* To be confirmed.
+
 </div>
 <div class="optb"> 
 <br>
