--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -50,6 +50,7 @@ in Voiculescu's Free Probability Theory from the context of free groups, to fund
 <br>
 <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> (PDRA)
 <br>
+Anitej Banerjee (Ph.D. Student)<br>
 Ewan Cassidy (Ph.D. Student)
 </div> 
 
@@ -69,7 +70,18 @@ Ewan Cassidy (Ph.D. Student)
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strongly convergent unitary representations of limit groups.</b>  
+Michael Magee and <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder</a> <br>
+Preprint, contains an appendix by <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and Michael Magee
+</b>
+<br>
+</tr>
 <tr >
 <td>
 </td>
