--- a/papers.html
+++ b/papers.html
@@ -36,10 +36,11 @@
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
- (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> <br>
- Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
+ (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
+ 
 </b>
 <br>
+Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
 </tr>
 <tr >
 <td>
@@ -146,7 +147,7 @@ Submitted
 </td>								
 <td>17. <b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)  <br>
-<u>Mathematische Annalen</u>, 2023</td>
+<u>Mathematische Annalen</u>, 2023.</td>
 
 </tr>	
     
