--- a/seminar.html
+++ b/seminar.html
@@ -82,7 +82,7 @@
 </td>
 <td>
 <a href="https://www.tbenardmath.com">Timoth&eacutee B&eacutenard</a>
-<td><b>Title TBA<b>
+<td><b>The local limit theorem on nilpotent Lie groups<b>
 </td>
 </td>	
 </tr >
@@ -95,7 +95,7 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">We establish the local limit theorem for biased random walks on a simply connected nilpotent Lie group G. The result allows to approximate at scale 1 the n-step distribution of the walk by the time n of a smooth diffusion process for a new group structure on G. We also show this approximation is robust under deviation. The proof uses a Gaussian replacement scheme, combining Fourier analysis and a swapping argument inspired by the work of Diaconis-Hough. As a consequence, we obtain a probabilistic version of Ratner's theorem: Ad-unipotent random walks on finite-volume homogeneous spaces equidistribute toward algebraic measures. Joint work with Emmanuel Breuillard.
 </div>
 </td>	
 </tr>
