--- a/seminar.html
+++ b/seminar.html
@@ -105,7 +105,7 @@
 </td>
 <td>
 <a href="https://www.kcl.ac.uk/people/petr-kravchuk">Petr Kravchuk</a>
-<td><b>Title TBA<b>
+<td><b>Automorphic Spectra and the Conformal Bootstrap<b>
 </td>
 </td>	
 </tr >
@@ -117,7 +117,7 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">Conformal Bootstrap is an active area of research in theoretical physics, which aims to constrain a subclass of quantum field theories starting only from a set of basic self-consistency conditions. In this talk I will review the relation between this program and the spectral theory of hyperbolic manifolds. As I will show, hyperbolic manifolds (orbifolds, more generally) provide solutions to the self-consistency equations used in conformal bootstrap. Furthermore, a direct application of standard conformal bootstrap techniques leads to strong constraints on the spectral gap of hyperbolic 2-orbifolds, which is in many cases nearly saturated by known surfaces. I will also mention some new results from an ongoing work. Based on https://arxiv.org/abs/2111.12716 and work in progress with James Bonifacio, Dalimil Mazac and Sridip Pal.
 </div>
 </td>	
 </tr><tr >
