--- a/DS_SG.html
+++ b/DS_SG.html
@@ -41,6 +41,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <b>Sam Edwards</b> (Durham University)<br>
 <b>Will Hide</b> (Durham University)<br>
 <b>Petr Kravchuk</b> (King's College London)<br>
+<b>Ursula Hamenstadt</b> (University of Bonn)<br>
 <b>Dalimil Mazac</b> (IAS Princeton)<br>
 <b>Wenyu Pan</b> (University of Toronto)<br>
 <b>Bram Petri</b> (IMJ and Sorbonne University)<br>
