--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <div class="optw"><b>About me</b></div>
 
 <div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>.  <br>
+In academic year 2023-2024 I'll be a Von Neumann fellow at IAS Princeton.<br>
 
  I'm interested in a broad range of problems in geometry, dynamics, spectral theory, and number theory.   <br>
  
