--- a/DS_SG.html
+++ b/DS_SG.html
@@ -38,6 +38,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <div class="optb"> 
 <br>
 <u><b>Speakers</b></u><br>
+<b>Sean Eberhard</b> (Queen's University Belfast)<br>
 <b>Sam Edwards</b> (Durham University)<br>
 <b>Will Hide</b> (Durham University)<br>
 <b>Petr Kravchuk</b> (King's College London)<br>
