--- a/papers.html
+++ b/papers.html
@@ -37,8 +37,7 @@
 </td>
 <td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
- 
-</b>
+ </b>
 <br>
 Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>
 </tr>
@@ -56,21 +55,7 @@ Submitted
 
 </td>	
 </tr>	
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>21. <b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
- (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
-</b>
-<br>
-Submitted
-<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
-<a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
-</td>	
-</tr>	
+
 
 <tr >
 <td>
@@ -78,7 +63,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>20. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+<td>21. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
  (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted
@@ -92,7 +77,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>19. <b>Random Unitary Representations of Surface Groups II: The large n limit.
+<td>20. <b>Random Unitary Representations of Surface Groups II: The large n limit.
 </b> 
 <br>
 Submitted
@@ -108,7 +93,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>18. <b>The asymptotic statistics of random covering surfaces.
+<td>19. <b>The asymptotic statistics of random covering surfaces.
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br>Submitted
 </td>	
@@ -136,8 +121,21 @@ Submitted
 </tr>
 
 
-
-
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>18. <b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
+ (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+</b>
+<br>
+<u>Annals of Mathematics</u>, to appear.
+<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
+<a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
+</td>	
+</tr>	
 <tr >	
 
 <td>
