--- a/DS_SG.html
+++ b/DS_SG.html
@@ -46,6 +46,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <b>Ursula Hamenstadt</b> (University of Bonn)<br>
 <b>Dalimil Mazac</b> (IAS Princeton)<br>
 <b>Wenyu Pan</b> (University of Toronto)<br>
+<b>Ori Parzanchevski</b> (Hebrew University of Jerusalem)<br>
 <b>Bram Petri</b> (IMJ and Sorbonne University)<br>
 <b>Nikhil Srivastava</b> (UC Berkeley)<br>
 <b>Nina Zubrilina</b> (Princeton University)<br>
