--- a/seminar.html
+++ b/seminar.html
@@ -38,7 +38,7 @@
 </td>
 <td>
 <a href="https://www.southampton.ac.uk/people/5z97q7/doctor-kevin-boucher">Kevin Boucher</a>
-<td><b>Title TBA<b>
+<td><b>Spherical representations of hyperbolic groups<b>
 </td>
 </td>	
 </tr >
@@ -51,7 +51,7 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc">After a brief introduction to subject of spherical representations of hyperbolic groups, I will present a new construction motivated by a spectral formulation of the so-called Shalom conjecture.This a joint work with Dr Jan Spakula.
 </div>
 </td>	
 </tr>
@@ -61,7 +61,7 @@
 </td>
 <td>
 <a href="http://users.sussex.ac.uk/~and22/">Antoine Dahlqvist</a>
-<td><b>Title TBA<b>
+<td><b>The Planar Master Field and the Yang-Mills measure on surfaces <b>
 </td>
 </td>	
 </tr >
@@ -73,7 +73,12 @@
 <td><div class="collapsible">
 [Abstract] 
 </div>
-<div class="optc">TBA
+<div class="optc"> In this talk I will discuss about models of random unitary matrices of large size. Considering r matrices of size N,  this can be thought of as a random, N dimensional, unitary representation of the free group of rank r, and leads to a random state on the group algebra of the free group. Since the seminal work of Voiculescu in the 90’s, it is well established that independent, uniform unitary matrices are asymptotically, freely independent: the latter random state converges weakly, in probability towards the character of the regular representation of the free group, as N goes to infinity. 
+<br>
+On Friday, I will consider models of unitary matrices which are not independent,  but with conditions on their commutators.  I will review recent results of M. Magee on the so called Atiyah-Bott-Goldman measure — a model of random unitary representation of surface groups — and of two recent joint works of myself with T. Lemoine about the Yang-Mills measure on surfaces, which can be thought of as a model  interpolating between Voiculescu’s and Atiyah-Bott-Goldman’s settings. For the torus, the latter joint works lead to a new interpolation between classical and free independence. 
+
+
+
 </div>
 </td>	
 </tr>
