--- a/papers.html
+++ b/papers.html
@@ -87,20 +87,6 @@ Submitted
 	
 
 
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>
-<td>19. <b>The asymptotic statistics of random covering surfaces.
-</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
-<br>Submitted
-</td>	
-</tr>	
-
-
-
 
 
 
@@ -119,6 +105,21 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td>19. <b>The asymptotic statistics of random covering surfaces.
+</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<br>
+<u>Forum of Mathematics, Pi</u>, to appear.
+</td>	
+</tr>	
+
 
 
 <tr >
