--- a/papers.html
+++ b/papers.html
@@ -33,6 +33,19 @@
 <td>
 </td>
 <td>
+<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>24. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
+ </b>
+<br>
+
+</tr>
+
+<tr >
+<td>
+</td>
+<td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
