--- a/DS_SG.html
+++ b/DS_SG.html
@@ -33,7 +33,8 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <div class="optb"> 
 <br>
 <u><b>Registration</b></u><br>
-<a href="https://forms.gle/BiHTsH9Spfov6GWS6">Here (link)</a>
+<a href="https://forms.gle/BiHTsH9Spfov6GWS6">Here (link)</a><br>
+Full consideration will be given to applications received by 10th May
 </div> 
 <div class="optb"> 
 <br>
@@ -49,6 +50,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <b>Ori Parzanchevski</b> (Hebrew University of Jerusalem)<br>
 <b>Bram Petri</b> (IMJ and Sorbonne University)<br>
 <b>Nikhil Srivastava</b> (UC Berkeley)<br>
+<b>Yunhui Wu</b> (Tsinghua University) <br>
 <b>Nina Zubrilina</b> (Princeton University)<br>
 
 </div>
