--- a/papers.html
+++ b/papers.html
@@ -36,8 +36,9 @@
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>24. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
- (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
- </b>
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)<br>
+ Preprint
+
 <br>
 
 </tr>
