--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -46,7 +46,7 @@ in Voiculescu's Free Probability Theory from the context of free groups, to fund
 </div>
 <br>
 <u><b>Team members</b></u><br>
-<a href="https://www.imo.universite-paris-saclay.fr/~calderon/">Irving Calder&oacuten</a> (PDRA)
+<a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> (PDRA)
 <br>
 <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> (PDRA)
 <br>
@@ -69,6 +69,20 @@ Ewan Cassidy (Ph.D. Student)
 <tr >    <th colspan="3", text-align="center"><u>Outputs of the program</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
+</tr>
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)<br>
+ Preprint
+
+<br>
+
 </tr>
 <tr >
 <td>
@@ -105,21 +119,6 @@ Preprint
 </b>
 <br>
 
-</td>	
-</tr>	
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
- <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and Michael Magee
-</b>
-<br>
-Preprint
-<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
-<a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
 </td>	
 </tr>	
 
@@ -160,10 +159,30 @@ Preprint
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
 <td><b>The asymptotic statistics of random covering surfaces.
-</b> Michael Magee and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>
-<br>Preprint
+</b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<br>
+<u>Forum of Mathematics, Pi</u>, to appear.
 </td>	
 </tr>	
+
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
+ (With <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a>)
+</b>
+<br>
+<u>Annals of Mathematics</u>, to appear.
+<a href="https://www.youtube.com/watch?v=DEPQf675nXw">[One hour talk]	</a> 
+<a href="https://www.quantamagazine.org/impossible-seeming-surfaces-confirmed-decades-after-conjecture-20220602/">[Quanta article]	</a> 
+</td>	
+</tr>	
+<tr >		
 <tr >
 <td>
 <a href="https://doi.org/10.1007/s00039-022-00602-x"><img src="j_ico.png"title="Journal" width="100%"></a>
