--- a/papers.html
+++ b/papers.html
@@ -85,18 +85,6 @@ Submitted
 </tr>	
 
 
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>
-<td>20. <b>Random Unitary Representations of Surface Groups II: The large n limit.
-</b> 
-<br>
-Submitted
-</td>	
-</tr>	
 
 	
 
@@ -119,6 +107,20 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td>20. <b>Random Unitary Representations of Surface Groups II: The large n limit.
+</b> 
+<br>
+<u>Geometry and Topology</u>, to appear.
+</td>	
+</tr>	
 
 
 <tr >
