--- a/DS_SG.html
+++ b/DS_SG.html
@@ -41,6 +41,7 @@ Full consideration will be given to applications received by 10th May
 <u><b>Speakers</b></u><br>
 <b>Sean Eberhard</b> (Queen's University Belfast)<br>
 <b>Sam Edwards</b> (Durham University)<br>
+<b>Alex Gamburd</b> (CUNY Graduate Center)<br>
 <b>Will Hide</b> (Durham University)<br>
 <b>Urban Jezernik</b> (University of Ljubljana)<br>
 <b>Petr Kravchuk</b> (King's College London)<br>
