--- a/DS_SG.html
+++ b/DS_SG.html
@@ -39,6 +39,8 @@ Full consideration will be given to applications received by 10th May
 <div class="optb"> 
 <br>
 <u><b>Speakers</b></u><br>
+<b>Anshul Adve </b>(Princeton University)<br>
+<b>Mikhail Belolipetsky </b>(IMPA)<br> 
 <b>Sean Eberhard</b> (Queen's University Belfast)<br>
 <b>Sam Edwards</b> (Durham University)<br>
 <b>Alex Gamburd</b> (CUNY Graduate Center)<br>
