--- a/DS_SG.html
+++ b/DS_SG.html
@@ -34,7 +34,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <br>
 <u><b>Registration</b></u><br>
 <a href="https://forms.gle/BiHTsH9Spfov6GWS6">Here (link)</a><br>
-Full consideration will be given to applications received by 10th May
+*Registration still open*
 </div> 
 <div class="optb"> 
 <br>
