--- a/papers.html
+++ b/papers.html
@@ -36,11 +36,9 @@
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>24. <b>Explicit spectral gap for Schottky subgroups of SL_2(Z)</b>  
- (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)<br>
- Preprint
-
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
 <br>
-
+Submitted.
 </tr>
 
 <tr >
@@ -124,7 +122,9 @@ Submitted
 
 
 <tr >
-<td>
+<td><a href="https://doi.org/10.1017/fmp.2023.13"><img src="j_ico.png"title="Journal" width="100%"></a>
+
+
 </td>
 <td>
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
