--- a/DS_SG.html
+++ b/DS_SG.html
@@ -32,9 +32,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 </div> 
 <div class="optb"> 
 <br>
-<u><b>Registration</b></u><br>
-<a href="https://forms.gle/BiHTsH9Spfov6GWS6">Here (link)</a><br>
-*Registration still open*
+<u><b>Registration is closed</b></u><br>
 </div> 
 <div class="optb"> 
 <br>
@@ -52,6 +50,7 @@ All participants will be given fully catered accommodation at Collingwood Colleg
 <b>Wenyu Pan</b> (University of Toronto)<br>
 <b>Ori Parzanchevski</b> (Hebrew University of Jerusalem)<br>
 <b>Bram Petri</b> (IMJ and Sorbonne University)<br>
+<b>Julia Slipantschuk</b> (University of Warwick)<br>
 <b>Nikhil Srivastava</b> (UC Berkeley)<br>
 <b>Yunhui Wu</b> (Tsinghua University) <br>
 <b>Nina Zubrilina</b> (Princeton University)<br>
