--- a/papers.html
+++ b/papers.html
@@ -56,17 +56,7 @@ Submitted. Contains an appendix written with <a href="https://www.maths.dur.ac.u
 <tr >
 <td>
 </td>
-<td>
-<a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>22. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
- (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> and <a href="https://yufeizhao.com/">Yufei Zhao</a>)<br>
-Submitted
-</b>
-<br>
 
-</td>	
-</tr>	
 
 
 <tr >
@@ -75,7 +65,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>21. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+<td>22. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
  (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted
@@ -105,8 +95,20 @@ Submitted
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>21. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
+ (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> and <a href="https://yufeizhao.com/">Yufei Zhao</a>)<br>
+<u>Communications in Mathematical Physics</u>, to appear.
+</b>
+<br>
 
-
+</td>	
+</tr>	
 <tr >
 <td>
 </td>
