--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ In academic year 2023-2024 I'll be a Von Neumann fellow at IAS Princeton.<br>
 
 <div class="optw"><b>PhD students</b></div>
 <div class="optw">
-<a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
+<a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
 <br>
 Ewan Cassidy (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
 Anitej Banerjee (2022-2026)
